--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,10 +41,12 @@ jobs:
         run : |
           curl -L https://github.com/enmity-mod/patcher/releases/latest/download/patcher.mac-amd64 -o ${{ github.workspace }}/patcher
           chmod +x patcher
+
+      - name: Run Script to get discord_ipa_url
+        run: sh ./script.sh
       
       - name: Download Discord IPA
         run: |
-          sh ./script.sh
           curl -L ${{ env.discord_ipa_url }} -o ${{ github.workspace }}/Discord.ipa
 
       - name: Patch Discord
