--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,8 @@
 name: Automatically create a stable release
 on:
-  push:
-  workflow_dispatch:
-  schedule:
-    - cron: '0 17 * * *'
-    - cron: '0 12 * * *'
+  workflow_run:
+    workflows: [build]
+    types: [requested]
 
 jobs:
   build:
