--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,5 +111,5 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           automatic_release_tag: discord_${{ env.DISCORD_VERSION }}
-          title: "${{ env.DISCORD_VERSION }} | Enmity v${{ steps.version.outputs.__ENMITY_VERSION }}"
+          title: "${{ env.DISCORD_VERSION }} | Enmity ${{ steps.version.outputs.__ENMITY_VERSION }}"
           files: out/*
