--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,7 +108,7 @@ jobs:
       - name: Create release
         uses: marvinpinto/action-automatic-releases@latest
         with:
-          repo_token: "${{ secrets.SERSTARS_BOT }}"
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           automatic_release_tag: ${{ env.DISCORD_VERSION }}
           title: "${{ env.DISCORD_VERSION }} | Enmity ${{ steps.version.outputs.__ENMITY_VERSION }}"
